--- a/config.toml
+++ b/config.toml
@@ -57,7 +57,7 @@ paginate = 5
     subtitle = ""
     owner = "Matthieu Gouel"
     keywords = ""
-    copyright = ""
+    copyright = "Copyright © 2021 Matthieu Gouel"
     menuMore = "Show more"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
