--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "/"
 languageCode = "en-us"
 theme = "terminal"
 paginate = 5
+enableEmoji = true
 
 [params]
   # dir name of your main content (default is `content/posts`).
