--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ enableEmoji = true
     subtitle = ""
     owner = "Matthieu Gouel"
     keywords = ""
-    copyright = "Copyright © 2021 Matthieu Gouel"
+    copyright = "Creative Commons BY-SA 4.0 License"
     menuMore = "Show more"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
@@ -76,3 +76,7 @@ enableEmoji = true
         identifier = "about"
         name = "About"
         url = "/about"
+      [[languages.en.menu.main]]
+        identifier = "posts"
+        name = "Posts"
+        url = "/posts"
