--- a/config.toml
+++ b/config.toml
@@ -23,6 +23,7 @@ enableEmoji = true
 
 [params]
   author = "Matthieu Gouel"
+  avatar = "avatar.png"
   description = "PhD Student in Computer Science and Software Engineer"
   menu_item_separator = " - "
   [[params.social]]
