--- a/config.toml
+++ b/config.toml
@@ -5,43 +5,38 @@ paginate = 5
 enableEmoji = true
 
 [menu]
-  [[menu.main]]
-    identifier = "home"
-    name = "Home"
-    url = "/"
-    weight = 1
-  [[menu.main]]
-    identifier = "about"
-    name = "About"
-    url = "/about/"
-    weight = 2
-  [[menu.main]]
-    identifier = "tags"
-    name = "Tags"
-    url = "/tags/"
-    weight = 3
+[[menu.main]]
+identifier = "home"
+name = "Home"
+url = "/"
+weight = 1
+[[menu.main]]
+identifier = "about"
+name = "About"
+url = "/about/"
+weight = 2
 
 [params]
-  author = "Matthieu Gouel"
-  avatar = "avatar.png"
-  description = "PhD Student in Computer Science"
-  menu_item_separator = " - "
-  [[params.social]]
-    icon = "mail"
-    name = "Mail"
-    url = "mailto:matthieu.gouel@protonmail.com"
-  [[params.social]]
-    icon = "github"
-    name = "Github"
-    url = "https://github.com/matthieugouel"
-  [[params.social]]
-    icon = "book"
-    name = "Scholar"
-    url = "https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=ao"
+author = "Matthieu Gouel"
+avatar = "avatar.png"
+description = "Research Fellow, Cloudflare"
+menu_item_separator = " - "
+[[params.social]]
+icon = "mail"
+name = "Mail"
+url = "mailto:matthieu.gouel@protonmail.com"
+[[params.social]]
+icon = "github"
+name = "Github"
+url = "https://github.com/matthieugouel"
+[[params.social]]
+icon = "book"
+name = "Scholar"
+url = "https://scholar.google.fr/citations?user=Ltb5srIAAAAJ&hl=fr&oi=ao"
 
-  [params.style]
-   darkestColor = "#242930"
-   darkColor = "#353b43"
-   lightColor = "#afbac4"
-   lightestColor = "#ffffff"
-   primaryColor = "#57cc8a"
+[params.style]
+darkestColor = "#242930"
+darkColor = "#353b43"
+lightColor = "#afbac4"
+lightestColor = "#ffffff"
+primaryColor = "#57cc8a"
